# runtime-manager

./: .gitignore  .gitmodules  Makefile  README.md  benchmarks.md  linux_minimal.py  manage.py  manager.py  messaging.rst  mypy.ini  requirements-dev.txt  requirements-runtime.txt  requirements.txt  runtime.py  sockets.c  start.py  test.py
common/: __init__.py  http.py  logging.py  mqtt.py
dataset/: __init__.py  matrix.py  opcodes.py  rank1.py  trace.py  utils.py
docs/: creating_runtimes.md  interface.md  messaging.rst
interfaces/: __init__.py  benchmarking.py  data_race.py  linux.py  linux_minimal.py  test.py
libsilverline/: requirements.txt  setup.py
libsilverline/libsilverline/: __init__.py  cluster.py  http.py  logging.py  mqtt.py  socket.py  types.py  util.py
linux_minimal/: linux_minimal.py
manager/: __init__.py  channels.py  exceptions.py  linux.py  linux_minimal.py  logging.py  manager.py  module.py  mqtt.py  runtime.py  runtime_mixins.py  socket.py  sockets.py  types.py
manager/runtimes/: __init__.py  base.py  benchmarking.py  linux.py  linux_minimal.py  test.py  util.py
runtimes/: Makefile  common.py  linux_benchmarking.py  linux_benchmarking_dd.py  linux_benchmarking_interference.py  linux_benchmarking_seeded.py  linux_minimal.py  linux_minimal_core.py
runtimes/common/: deadline.c  deadline.h  json_parse.c  json_parse.h  json_utils.c  json_utils.h  logging.c  logging.h  module.h  sockets.c  sockets.h  wamr.c  wamr.h
runtimes/linux-datarace-wali/: CMakeLists.txt
runtimes/linux-datarace-wali/inc/: access_export.h
runtimes/linux-datarace-wali/inst_lib/: access.cpp  opaccess.h  optable.c  tsvd.cpp
runtimes/linux-datarace-wali/src/: runtime.c  runtime.h
runtimes/linux-minimal-wamr/: CMakeLists.txt  Makefile
runtimes/linux-minimal-wamr/src/: logging.c  main.c  module.h  msg_printf.c  outputs.c  runtime.c  runtime.h
runtimes/profiling-opcodes/: CMakeLists.txt  Makefile
runtimes/profiling-opcodes/src/: runtime.c
services/: Makefile  profile.py
services/orchestrator/: Makefile  mypy.ini  requirements.txt
services/orchestrator/orchestrator/: apps.py  messages.py  models.py  orchestrator.py  urls.py  views.py
services/orchestrator/orchestrator/migrations/: 0001_initial.py  0002_alter_runtime_max_nmodules.py  0003_alter_runtime_parent.py
services/orchestrator/orchestrator/pubsub/: __init__.py  base.py  control.py  keepalive.py  registration.py
services/orchestrator/pubsub/: handler_control.py  handler_registration.py
services/orchestrator/settings/: settings.py
services/profile/: Makefile  parsers.py  profile.py  requirements.txt
tools/: __init__.py  _ssh.py  alias.py  aot.py  benchmark.py  command.py  configure.py  cpufreq.py  datarace.py  get.py  index.py  list.py  make_alias.py  put.py  run.py  runall.py  shortcuts.py  start.py  status.py  stop.py
